# backend_server

./: README.md
game_lib/app/: app.h  loot_data.h
game_lib/model/: collision_detector.cpp  collision_detector.h  tagged.h
game_server/src/: logger.cpp  request_handler.cpp
game_server/src/db/: connection_pool.h
hello/src/: main  main.cpp
sprint1/problems/async_server/precode/src/: main.cpp
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.h  logger.h
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/precode/: main
sprint1/problems/sum/solution/: CMakeLists.txt  solution.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: Dockerfile
sprint2/problems/command_line/solution/build-release/: conanbuildinfo.txt  conanbuildinfo_release.cmake  conaninfo.txt  graph_info.json
sprint2/problems/command_line/solution/includes/: application.h  gameplay.h  json_loader.h  model.h  tagged.h  ticker.h
sprint2/problems/command_line/solution/scripts/: rotate_logs.sh
sprint2/problems/command_line/solution/src/: application.cpp  gameplay.cpp  json_loader.cpp  main.cpp  model.cpp  ticker.cpp
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/includes/: gameplay.h
sprint2/problems/join_game/solution/includes/network/rest_api/: file.h
sprint2/problems/join_game/solution/src/: json_loader.cpp  main.cpp  ticker.cpp
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/scripts/: crontab_add.sh
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  nohup.out  prometheus.yml
sprint2/problems/static_content/solution/: README.md
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/time_control/solution/includes/network/rest_api/: api.h
sprint2/problems/time_control/solution/src/: api_handler.cpp  api_handler.h  common_request_handler.cpp  common_request_handler.h  dog.cpp  dog.h  game_to_json.cpp  game_to_json.h  gameplay.cpp  gamesession.cpp  gamesession.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  player.cpp  player.h  player_tokens.cpp  player_tokens.h  players.cpp  players.h  request_handler.cpp  request_handler.h
sprint3/problems/ammo/: ammo.txt
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/flamegraph/precode/: shoot.py
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/instrumentation/solution/: event2dot  gmon.out
sprint3/problems/scores/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/scores/solution/headers/: json_loader.h
sprint3/problems/scores/solution/headers/game/: collision_detector.h  loot_data.h  loot_generator.h  model.h
sprint3/problems/scores/solution/headers/server_core/: api_handler.h  application.h  http_server.h  request_handler.h
sprint3/problems/scores/solution/src/: api_handler.cpp  app.cpp  app.h  collision_detector.cpp  http_server.cpp  json_loader.cpp  json_loader.h  logger.h  loot_generator.h  main.cpp  model.cpp  model.h  parser.h  request_handler.h  ticker.h
sprint3/problems/scores/solution/src/game/: collision_detector.cpp  loot_data.cpp  loot_generator.cpp  model.cpp
sprint3/problems/scores/solution/src/logger/: logger.cpp
sprint3/problems/scores/solution/src/server_core/: api_handler.cpp  application.cpp  http_server.cpp  request_handler.cpp
sprint3/problems/scores/solution/tests/: collision-detector-tests.cpp  loot_generator_tests.cpp  model_tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/static_lib/solution/src/: model.cpp  ticker.h
sprint3/problems/static_lib/solution/tests/: loot_generator_tests.cpp  model_tests.cpp
sprint4/problems/db_of_books/solution/: conanfile.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/game_lib/: CMakeLists.txt
sprint4/problems/leave_game/solution/game_lib/app/: app.cpp  loot_data.cpp
sprint4/problems/leave_game/solution/game_lib/model/: geom.h  model.cpp  model.h
sprint4/problems/leave_game/solution/game_lib/serialization/: manager.h  representations.h
sprint4/problems/leave_game/solution/game_server/: CMakeLists.txt
sprint4/problems/leave_game/solution/game_server/src/: api_handler.cpp  api_handler.h  constants.h  http_server.h  json_loader.cpp  json_loader.h  main.cpp  parser.h  request_handler.cpp  request_handler.h  state_storage.h  ticker.h
sprint4/problems/leave_game/solution/game_server/src/db/: connection_pool.h  database.cpp  database.h  tagged_uuid.h
sprint4/problems/leave_game/solution/tests/: CMakeLists.txt  collision-detector-tests.cpp  loot_generator_tests.cpp  model_tests.cpp  state-serialization-tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/src/: api_handler.cpp  api_handler.h  app.cpp  app.h  json_loader.cpp  loot_generator.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  state_storage.h
sprint4/problems/state_serialization/solution/src/serialization/: representations.h
sprint4/problems/state_serialization/solution/tests/: state-serialization-tests.cpp
(+73 files in other folders)
